# py-nic-manager

./: .gitignore  PROGRAMMING_API.md  README.md  pyproject.toml
docs/: PACKAGING.md
py_nic_manager/: __init__.py  __main__.py  admin.py  api.py  app.py  backends.py  frozen_entry.py  global_forwarding.py  io.py  macos_forwarding.py  models.py  nat_persistence.py  ping.py  qt_app.py  subprocess_utils.py  tk_fonts.py  ttl_exceeded.py  ui_tables.py  validation.py  windows_device_policy.py  windows_loopback.py  windows_tap.py  windows_virtual.py  windows_wintun.py
py_nic_manager/assets/: __init__.py
py_nic_manager/assets/fonts/: __init__.py
py_nic_manager/assets/tap-windows6/: README.md
scripts/: build_linux_onefile.sh  build_windows_onefile.ps1
tests/: test_core.py
